# VoidExtractor

./: .gitignore  README.md  REUSE.toml  meson.build
src/: detect.c  detect.h  extractor.h  main.c
src/vfs/: vfs_v1.c  vfs_v1.h  vfs_v2.c  vfs_v2.h
